--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Apr 10 15:15:13 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* NEWS configure.in libvirt.spec.in docs/*: documented and
+	  regenerated for release of 0.1.0
+	* Makefile.am virsh.1: added man page from Andrew Puch
+
 Mon Apr 10 09:32:29 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xend_internal.c src/xml.c: applied patch from Jim Fehlig
