--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu Apr 13 17:19:25 EDT 2006 Daniel Veillard <veillard@redhat.com>
+
+	* include/libvirt.h include/libvirt.h.in doc/*: added new entry point
+	  virDomainSetMemory to set up the target memory use for a domain
+	* src/driver.h src/libvirt.c src/xen_internal.c src/xend_internal.[ch]
+	  src/xs_internal.[ch]: added a new entry point in the drivers for this,
+	  also fixed the xen store entry, as changing
+	  /local/domain/$$/memory/target affects the target memory not the max,
+	  apparently max is not visible at the xenstore level (or I missed it)
+
 Mon Apr 10 15:15:13 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS configure.in libvirt.spec.in docs/*: documented and
