--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr 27 14:17:04 EDT 2006 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c src/xend_internal.c TODO: added uuid to the XML
+	  serialization
+
 Wed Apr 26 08:32:38 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* src/xml.c: applied patch from Jeremy Katz to not require a 
