--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 10 15:50:32 CEST 2006 Karel Zak <kzak@redhat.com>
+
+	* src/virterror.c include/virterror.h: added VIR_FROM_RPC
+	* src/xmlrpc.c: added checks and _virRaiseError()
+
 Wed May 10 13:17:00 CEST 2006 Karel Zak <kzak@redhat.com>
 
 	* src/xml.c src/xml.h: added virBufferNew() and virBufferStrcat()
