--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jun 05 22:31:20 EDT 2006 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/test.c, src/test.h: New 'mock' hypervisor driver providing
+	a way to write predictable unit tests which exercise libvirt APIs.
+	* src/libvirt.c, src/Makefile.am: Integrate test hypervisor driver
+
 Fri May 26 11:59:20 EDT 2006 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/hash.c, src/internal.h: Switch the uuid parameter in virGetDomain
