--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Mon Jun 26 16:05:27 CEST 2006 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in libvirt.spec.in docs/examples/* include/Makefile.am
+	  include/libvirt/virterror.h python/generator.py python/libvir.c 
+	  python/libvirt_wrap.h src/driver.h src/internal.h src/test.h
+	  src/virsh.c src/virterror.c src/xend_internal.c src/xend_internal.h
+	  src/xml.c src/xml.h: moved the includes from include/ to
+	  include/libvirt to reflect the installed include tree. This
+	  avoid using "" in the includes themselves.
+
 Wed Jun 21 14:41:04 CEST 2006 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS libvirt.spec.in docs/*: preparing release of 0.1.1
