* NEWS docs/* configure.in libvirt.spec.in include/libvirt/libvirt.h:   preparing release of 0.1.2 * src/proxy_internal.c: don't warn on open if using http and not the   proxy. Daniel

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,13 @@
        http://libvirt.org/news.html
 
 Releases
+0.1.2: Jul 3 2006:
+   -  headers include paths fixup
+  
+   -  proxy mechanism for unpriviledged read-only access by httpu
+
+
+
 0.1.1: Jun 21 2006:
    -  building fixes: ncurses fallback (Jim Fehlig), VPATH builds (Daniel P.
        Berrange)
