--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jul  3 15:41:58 EDT 2006 Daniel Veillard <veillard@redhat.com>
+
+	* NEWS docs/* configure.in libvirt.spec.in include/libvirt/libvirt.h:
+	  preparing release of 0.1.2
+	* src/proxy_internal.c: don't warn on open if using http and not the
+	  proxy.
+
 Mon Jul  3 13:54:03 EDT 2006 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.spec.in proxy/Makefile.am src/proxy_internal.c 
